# LVGL_Test_1

./: CMakeLists.txt  partitions.csv  sdk_test  sdkconfig  sdkconfig.old
api/: api.py  ayarlar.xml  test_connection.py  test_connection2.py
components/lvgl__lvgl/: lv_conf_template.h
components/lvgl__lvgl/src/: lv_conf_internal.h  lv_conf_kconfig.h
main/: CMakeLists.txt  lvgl_port.c  main.c  time_manager.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h  wifi_manager.c  wifi_manager.h
main/assets/: ui_img_441374382.c  ui_img_logout_png.c  ui_img_setting_png.c
main/ping/: ping_test.c  ping_test.h
main/screens/: screen_bant_select.c  screen_loading.c  screen_login.c  screen_main.c  screen_operation.c  screen_order_select.c  screen_settings.c
main/storage/: storage_settings.c  storage_settings.h
main/system/: system_http.c  system_http.h  system_time.c  system_time.h  system_wifi.c  system_wifi.h
main/ui/: CMakeLists.txt  bantSelectScreen.c  filelist.txt  montserrat_custom_100_8bbp.c  montserrat_custom_100_8bbp.h  operationSelectScreen.c  orderSelectScreen.c  settingsScreen.c  ui.c  ui.h  ui_LoadingScreen.c  ui_MainScreen.c  ui_events.c  ui_helpers.c  ui_helpers.h  ui_img_973080792.c  ui_loginScreen.c  ui_tileTestScreen.c
