SET(SOURCES ui_LoadingScreen.c
    ui_MainScreen.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_973080792.c
    montserrat_custom_100_8bbp.c
    images/ui_img_973080792.c
    images/ui_img_logout_png.c
    images/ui_img_setting_png.c
    images/ui_img_441374382.c
    )

add_library(ui ${SOURCES})
